[package]
name = "river-bsp-layout"
version = "0.2.0"
edition = "2021"
author = "AJ Reifsnyder <ajreifsnyder@protonmail.com>"
about = "Binary space partitioned layout for the tiling Wayland compositor River."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
river-layout-toolkit = "0.1"
clap = { version = "4.4", features = ["derive"] }
