[package]
name = "river-bsp-layout"
version = "2.1.0"
edition = "2021"
authors = ["AJ Reifsnyder <ajreifsnyder@protonmail.com>"]
about = "Binary space partitioned layout for the tiling Wayland compositor River."
license = "GPL-3.0"
description = "Binary space partitioned layout for the tiling Wayland compositor River."
homepage = "https://github.com/areif-dev/river-bsp-layout"
repository = "https://github.com/areif-dev/river-bsp-layout"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help"] }
regex = "1.10"
river-layout-toolkit = "0.1"

[package.metadata.rpm]
package = "river-bsp-layout"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
river-bsp-layout = { path = "/usr/bin/river-bsp-layout" }
